--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,11 @@ proguard/
 
 # Android Studio captures folder
 captures/
+
+*.iml
+*.gradle
+src/androidTest/
+src/test/
+libs/
+gradle.properties
+proguard-rules.pro
